Fri May 24 15:48:18 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (after_gc_sweep, garbage_collect_body): do major GC (full GC)
	  before extending heaps.
	  TODO: do major GC when there are many old (promoted) objects.

	* gc.c (after_gc_sweep): remove TODO comments.

Fri May 24 11:04:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_RPATHFLAGS): do not append -L option with
	  runtime library directory if cross compiling, but only -R option.
	  runtime path makes no sense on the host system.  [ruby-dev:47363]
	  [Bug #8443]

Fri May 24 02:57:17 2013  Koichi Sasada  <ko1@atdot.net>

	* object.c (rb_obj_clone): should not propagate OLDGEN status.
	  This propagation had caused WB miss for class.

Thu May 23 17:35:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (loaded_feature_path): fix invalid read by index underflow.
	  the beginning of name is also a boundary as well as just after '/'.

Thu May 23 17:21:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_profile_dump_on): revert r40898.  ok to show the record
	  accumulating while lazy_sweep().

Wed May 22 16:50:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_profile_dump_on): use size_t to get rid of overflow and
	  show the header when next_index > 0, instead of next_index != 1.

Wed May 22 15:18:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (setup_overlapped): check the error code in addition
	  to the result of SetFilePointer() to determine if an error occurred,
	  because INVALID_SET_FILE_POINTER is a valid value.
	  [ruby-core:55098] [Bug #8431]

	* win32/win32.c (setup_overlapped, finish_overlapped): extract from
	  rb_w32_read() and rb_w32_write().

Wed May 22 14:19:56 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prepare_free_objects, rest_sweep, lazy_sweep): fix position
	  of `during_gc' setting.

Wed May 22 07:36:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect): all GC is start from garbage_collect()